# vibe-backend

./: README.md  pyproject.toml  requirements.txt
developer_assets/: user_authorization.http
src/: config.py  main.py
src/api/: router.py
src/features/auth/: router.py  schemas.py  utils.py
src/features/users/: router.py
